# speech_recognition

./: .gitignore  .travis.yml  .xml  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  Something.txt  build.bat  build.sh  context7.json  flac-linux-i386  flake8_report.txt  listen.py  make-release.sh  pyproject.toml  radon_cc_report1.txt  radon_mi_report.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  setup_vosk.py  speech_recognition.py  test_sr.py
.devin/: wiki.json
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: issues.yml  lint.yml  publish.yml  radon.yml  rstcheck.yml  typecheck.yml  unittests.yml
SpeechRecognitionFork.egg-info/: PKG-INFO  SOURCES.txt
SpeechRecognition_ForkedVersion.egg-info/: PKG-INFO  SOURCES.txt
examples/: audio_transcribe.py  background_listening.py  calibrate_energy_threshold.py  counting.gram  extended_results.py  long_interview_example__sphinx.txt  long_transcriptions.py  microphone-results.aiff  microphone-results.flac  microphone-results.raw  microphone_recognition.py  mp4&3_transcription.py  short_interview_example.aif  short_interview_example__sphinx.txt  speaker_recognition.py  special_recognizer_features.py  tensorflow_commands.py  threaded_workers.py  transcribe_cli.py  wav_transcribe.py  write_audio.py
examples/long_transcriptions/: bash_notes.txt  issues.yml  long_transcriptions.py
examples/long_transcriptions/data/audio-in/: .gitignore
examples/long_transcriptions/data/transcriptions-out/: long_interview_full_sphinx.txt  long_interview_sample_manual_lines.txt  long_interview_sample_manual_words.txt  long_interview_sample_sphinx_shell.txt  long_interview_sample_sphinx_words.txt  short_interview_sphinx.txt
examples/short_interview.band/: projectData
examples/short_interview.band/Alternatives/000/: DisplayState.plist  DisplayStateArchive  MetaData.plist  ProjectData
examples/short_interview.band/Media/Impulse Responses/: 1.1s_Vocal Plate.SDIR  1.6s_Short Vocal Hall.SDIR  2.6s_Vocal Plate.SDIR
examples/short_interview.band/Resources/: ProjectInformation.plist
perl/: .gitignore  Changes  MANIFEST  Makefile.PL  README.pod  TODO.md  try_transcribe.pl
perl/lib/Speech/: Recognition.pm
perl/lib/Speech/Recognition/: AudioData.pm  AudioFile.pm  Exception.pm  Microphone.pm  Recognizer.pm
perl/lib/Speech/Recognition/Recognizer/: AssemblyAI.pm  Azure.pm  Bing.pm  Google.pm  GoogleCloud.pm  Groq.pm  Houndify.pm  IBM.pm  OpenAI.pm  Whisper.pm  Wit.pm  Yap.pm  _Base.pm
perl/t/: 00-load.t  01-audio-data.t  10-audio-file.t  20-backends-mock.t
python/examples/: audio_transcribe.py  tensorflow_commands.py  threaded_workers.py
python/reference/: pocketsphinx.rst
python/tests/: audio-mono-16-bit-44100Hz.aiff  audio-mono-24-bit-44100Hz.flac  audio-stereo-16-bit-44100Hz.aiff  french.aiff  test_audio.py
python/tests/recognizers/: test_google_cloud.py
reference/: library-reference.rst  pocketsphinx.rst
speech_recognition/: __init__.py  __main__.py  audio.py  cli.py  exceptions.py  flac-linux-x86  flac-linux-x86_64  flac-mac  microphone.py  proxy.py  threaded_workersV2.py
speech_recognition/deepspeech-data/: README
speech_recognition/recognizers/: cohere_api.py  fasterwhisper.py  funasr.py  google.py  google_cloud.py  groq.py  openai.py  pocketsphinx.py  vosk.py  whisper.py  whisper_api.py  whisper_local.py
speech_recognition/recognizers/whisper_api/: base.py  groq.py  openai.py
speech_recognition/recognizers/whisper_local/: base.py  faster_whisper.py  whisper.py
tests/: __init__.py  audio-mono-16-bit-44100Hz.flac  audio-stereo-16-bit-44100Hz.flac  audio-stereo-24-bit-44100Hz.flac  chinese.flac  test_audio.py  test_microphone.py  test_proxy.py  test_recognition.py  test_special_features.py  test_whisper_recognition.py
tests/recognizers/: test_cohere_api.py  test_funasr.py  test_google.py  test_google_cloud.py  test_groq.py  test_openai.py  test_vosk.py  test_whisper.py
tests/recognizers/whisper_api/: test_groq.py  test_openai.py  test_openai_compatible.py
tests/recognizers/whisper_local/: test_faster_whisper.py  test_whisper.py
