[options.extras_require]
dev =
    numpy
    pytest
    pytest-randomly
    respx
    rstcheck
    ruff

audio =
    PyAudio >= 0.2.11
pocketsphinx =
    pocketsphinx < 5
google-cloud =
    google-cloud-speech
whisper-local =
    openai-whisper
    soundfile
faster-whisper =
    faster-whisper
openai =
    httpx < 0.28
    openai
groq =
    groq
    httpx < 0.28
assemblyai =
    requests
