[options.extras_require]
dev =
    pytest
    pytest-randomly
    respx
    numpy
audio =
    PyAudio >= 0.2.11
pocketsphinx =
    pocketsphinx
google-cloud =
    google-cloud-speech
whisper-local =
    openai-whisper
    soundfile
faster-whisper =
    faster-whisper
openai =
    openai
    httpx < 0.28
groq =
    groq
    httpx < 0.28
assemblyai =
    requests
